--- a/stylesheets/css/style.css
+++ b/stylesheets/css/style.css
@@ -1,8 +1,7 @@
 body {
   height: 100vh;
   color: #fff;
-  font-family: 'Raleway';
-  font-weight: 200; }
+  font-family: 'Lato'; }
 
 i {
   font-style: normal; }
@@ -11,8 +10,24 @@ i {
   padding-right: 0;
   padding-left: 0; }
 
+#units_choice {
+  height: 100vh;
+  width: 100%;
+  background-color: #ecf0f1;
+  color: #2c3e50;
+  position: absolute;
+  top: 0;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap; }
+  #units_choice h1 {
+    flex-basis: 100%; }
+  #units_choice a {
+    margin: 10px; }
+
 .bg-image {
-  background-image: url(../../images/bg/sunny-day.png);
   background-position: center center;
   background-size: cover;
   height: 100vh;
@@ -22,30 +37,38 @@ i {
     bottom: 30px; }
 
 .bg-color {
-  background-color: #f39c12;
   height: 100vh;
   font-size: 2em;
   font-weight: 100; }
   .bg-color p > i {
     font-weight: 500; }
 
-h1 small {
-  color: #ddd; }
+h1 {
+  display: inline-block; }
+  h1 small {
+    color: #ddd; }
+
+#time {
+  display: inline-block;
+  font-weight: 300; }
 
 footer {
   width: 100%; }
   footer i.wi {
     font-size: 8em;
-    line-height: 1.5; }
+    line-height: 1.5;
+    z-index: 2;
+    position: relative; }
 
 #white_quarter_circle {
   bottom: -50%;
   left: -50%;
   position: absolute;
-  width: 45em;
-  height: 40em;
+  width: 44em;
+  height: 43em;
   background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 50%; }
+  border-radius: 50%;
+  z-index: 1; }
 
 #cur_temp {
   font-size: 7em;
@@ -75,7 +98,7 @@ footer {
     line-height: 0;
     font-size: 1.5em;
     position: relative;
-    top: 30px;
+    top: 20px;
     left: -10px; }
   #day_max + .unit, #day_min + .unit {
     font-size: 1.2em;
@@ -97,5 +120,14 @@ footer {
 #days_icon {
   font-size: 2em;
   line-height: .8em; }
+
+.lnum {
+  font-variant-numeric: lining-nums;
+  -moz-font-feature-settings: "lnum" 1;
+  -moz-font-feature-settings: "lnum=1";
+  -ms-font-feature-settings: "lnum" 1;
+  -o-font-feature-settings: "lnum" 1;
+  -webkit-font-feature-settings: "lnum" 1;
+  font-feature-settings: "lnum" 1; }
 
 /*# sourceMappingURL=style.css.map */
